<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyEventTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="event"
            android:importantForAccessibility="yes"
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDesc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="date"
            android:importantForAccessibility="yes"
            android:inputType="date"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDate"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="time"
            android:importantForAccessibility="yes"
            android:inputType="time"
            android:onClick="showTimePickerDialog"
            tools:ignore="VisualLintTextFieldSize" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/timePickerButton"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/clock"
            android:onClick="showTimePickerDialog"
            app:backgroundTint="@color/fiu_light_gold"
            app:srcCompat="@drawable/ic_clock" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:hint="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTime">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="streetAddress"
            android:importantForAccessibility="yes"
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/theme_back_button_tint"
        android:text="@string/save_changes"
        android:textColor="@color/theme_back_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLocation"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="76dp"
        android:backgroundTint="@color/theme_back_button_tint"
        android:text="@string/common_cancel"
        android:textColor="@color/theme_back_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveChangesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLocation"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/modifyEventTextView"
        android:layout_width="240dp"
        android:layout_height="52dp"
        android:text="@string/modify_event"
        android:textAlignment="center"
        android:textColor="@color/fiu_primary_button_background_color"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deleteImageButton"
        android:layout_width="69dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:background="@color/fiu_light_gold"
        android:contentDescription="@string/delete_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelButton"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/fiu_trash_bin" />

</androidx.constraintlayout.widget.ConstraintLayout>

